--- a/WLPlayer/Class/Home/WPVideoInfoCell.xib
+++ b/WLPlayer/Class/Home/WPVideoInfoCell.xib
@@ -19,27 +19,27 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kS2-tb-Nyl">
-                        <rect key="frame" x="10" y="10" width="80" height="80"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kS2-tb-Nyl" customClass="YYAnimatedImageView">
+                        <rect key="frame" x="10" y="10" width="141.5" height="79.5"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="80" id="BEs-XZ-zb9"/>
-                            <constraint firstAttribute="width" constant="80" id="EZn-TL-GXD"/>
+                            <constraint firstAttribute="width" secondItem="kS2-tb-Nyl" secondAttribute="height" multiplier="16:9" id="2nE-si-0wz"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="获取中..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y4Q-M5-G0Z">
-                        <rect key="frame" x="100" y="10" width="62.5" height="19.5"/>
+                        <rect key="frame" x="161.5" y="10" width="62.5" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="获取中..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e7K-Fz-chx">
-                        <rect key="frame" x="100" y="42.5" width="47.5" height="15"/>
+                        <rect key="frame" x="161.5" y="42.5" width="47.5" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="获取中..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nf5-S2-CLW">
-                        <rect key="frame" x="100" y="75" width="47.5" height="15"/>
+                        <rect key="frame" x="161.5" y="74.5" width="47.5" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
                         <nil key="highlightedColor"/>
@@ -53,10 +53,12 @@
                     <constraint firstItem="Y4Q-M5-G0Z" firstAttribute="top" secondItem="kS2-tb-Nyl" secondAttribute="top" id="DLp-pd-v8n"/>
                     <constraint firstItem="nf5-S2-CLW" firstAttribute="bottom" secondItem="kS2-tb-Nyl" secondAttribute="bottom" id="EYe-Im-Q0s"/>
                     <constraint firstItem="e7K-Fz-chx" firstAttribute="leading" secondItem="Y4Q-M5-G0Z" secondAttribute="leading" id="I49-ly-V5i"/>
+                    <constraint firstAttribute="bottom" secondItem="kS2-tb-Nyl" secondAttribute="bottom" constant="10" id="JLa-LJ-gE9"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="e7K-Fz-chx" secondAttribute="trailing" constant="10" id="JTN-kc-3db"/>
                     <constraint firstItem="e7K-Fz-chx" firstAttribute="centerY" secondItem="kS2-tb-Nyl" secondAttribute="centerY" id="S6M-wZ-PuH"/>
                     <constraint firstItem="kS2-tb-Nyl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="ZHb-QB-IaD"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Y4Q-M5-G0Z" secondAttribute="trailing" constant="10" id="e5f-2l-aen"/>
+                    <constraint firstItem="kS2-tb-Nyl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="p59-VD-EB7"/>
                     <constraint firstItem="kS2-tb-Nyl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="uCq-7v-gGt"/>
                 </constraints>
             </tableViewCellContentView>
